[package]
name = "leptos-infinity"
description = "An optimization library for large list of dom elements"
license = "MIT"
version = "0.0.0"
edition = "2021"
authors = ["Deep Patel <deepp0925>"]
readme = "README.md"
repository = "https://github.com/Deepp0925/leptos_infinity"
homepage = "https://github.com/Deepp0925/leptos_infinity"
documentation = "https://docs.rs/leptos-infinity"
keywords = ["leptos", "infinity", "leptos-infinity"]
categories = ["web", "optimization", "leptos", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
